--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 
         <img src = "images/home-image.png" alt="Still from TV Show Hannibal" width="800">
 
+        <h2>Description </h2>
+        <p>This site offers delicacies both gastral and visual. Explore to discover new delights
+            to try, art to savour and ponder, and some basic plebian culinary favorites. 
+        </p>
+
+
+        <h2>Offerings </h2>
         <ul>
             <li> Main Courses</li>
                 <ul>
                     <li><a href="recipes/a-simple-breakfast.html">A simple Breakfast</a></li>
+                    <li><a href="recipes/tenderloin-with-cranberry-sauce.html">Tenderloin with Cranberry Sauce</a></li>
                 </ul>
             <li> Side Dishes</li>
             <li> Centerpeices and Decor</li>
@@ -24,7 +32,15 @@
                     <li><a href="decor/art-installation.html">An Enthralling Installation</a></li>
                 </ul>
             <li> Desserts</li>
-            <li> Dakkar's Favorites</li>
+            <li> Plebian Favorites</li>
+            <ul>
+                <li><a href="recipes/american-enchiladas.html">American Enchiladas</a></li>
+                <li><a href="recipes/buffalo-chicken-dip.html">Buffalo Chicken Dip</a></li>
+                <li><a href="recipes/college-fried-rice.html">College Fried Rice</a></li>
+                <li><a href="recipes/brownies.html">Brownies</a></li>
+                <li><a href="recipes/simple-white-bread.html">Simple White Bread</a></li>
+                <li><a href="recipes/college-fried-ramen.html">College Fried Ramen</a></li>
+            </ul>
         </ul>
 
         
