Add more stucture to art pages

--- a/decor/art-installation.html
+++ b/decor/art-installation.html
@@ -10,4 +10,16 @@
 
         <img src = "../images/randall-art-installation.jpeg" alt="Still from TV Show Hannibal" width="600">
     </body>
+
+    <p></p>
+
+    <br></br>
+
+    <p><a href="../index.html">Return to Home Page</a></li> </p>
+    <p> More Inspiring Decor</p>
+    <ul>        
+        <li><a href="../decor/human-centerpeice.html"  >A Lovely Floral Feild Centerpeice</a></li>
+        <li><a href="../decor/antler-statement-peice.html"  >A Bold Antler Statement Peice</a></li>
+        <li><a href="../decor/antler-statement-peice.html"  >A Mesmerizing Monument</a></li>
+    </ul>
 </html>
