--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             to try, art to savour and ponder, and some basic plebian culinary favorites. 
         </p>
 
-
         <h2>Offerings </h2>
         <ul>
             <li> Main Courses</li>
@@ -24,7 +23,7 @@
                     <li><a href="recipes/tenderloin-with-cranberry-sauce.html">Tenderloin with Cranberry Sauce</a></li>
                 </ul>
             <li> Side Dishes</li>
-            <li> Centerpeices and Decor</li>
+            <li> Centerpeices and Decor to Inspire</li>
                 <ul>
                     <li><a href="decor/human-centerpeice.html">A Lovely Floral Field Centerpeice</a></li>
                     <li><a href="decor/antler-statement-peice.html">A Bold Antler Statement Peice</a></li>
