--- a/decor/human-centerpeice.html
+++ b/decor/human-centerpeice.html
@@ -10,4 +10,17 @@
 
         <img src = "../images/tree-human-flowers.jpg" alt="Still from TV Show Hannibal" width="600">
     </body>
+
+    <p></p>
+
+    <br></br>
+
+    <p><a href="../index.html">Return to Home Page</a></li> </p>
+    <p> More Inspiring Decor</p>
+    <ul>        
+        <li><a href="../decor/antler-statement-peice.html"  >A Bold Antler Statement Peice</a></li>
+        <li><a href="../decor/antler-statement-peice.html"  >A Mesmerizing Monument</a></li>
+        <li><a href="../decor/antler-statement-peice.html"  >An Enthralling Installation</a></li>
+    </ul>
+
 </html>
