--- a/decor/monument-totem.html
+++ b/decor/monument-totem.html
@@ -10,4 +10,16 @@
 
         <img src = "../images/monument-of-bodies.jpg" alt="Still from TV Show Hannibal" width="600">
     </body>
+
+    <p></p>
+
+    <br></br>
+
+    <p><a href="../index.html">Return to Home Page</a></li> </p>
+    <p> More Inspiring Decor</p>
+    <ul>
+        <li><a href="../decor/human-centerpeice.html"  >A Lovely Floral Feild Centerpeice</a></li>
+        <li><a href="../decor/antler-statement-peice.html"  >A Bold Antler Statement Peice</a></li>
+        <li><a href="../decor/antler-statement-peice.html"  >An Enthralling Installation</a></li>
+    </ul>
 </html>
