Spelling errors fixed, more fleshing of art pages

--- a/decor/art-installation.html
+++ b/decor/art-installation.html
@@ -11,15 +11,19 @@
         <img src = "../images/randall-art-installation.jpeg" alt="Still from TV Show Hannibal" width="600">
     </body>
 
-    <p></p>
+    <p>A truly transformative display by the Ripper's protege and greatest triumph Graham. The piece features Graham's second
+        kill, one of his landmark displays. The intricate beauty and delicateness of the skillful
+        combination and the recognization and respect to the subject's identity makes this a work of
+        incredible significance, and has been known to trigger hours of deep contemplation. 
+    </p>
 
     <br></br>
 
     <p><a href="../index.html">Return to Home Page</a></li> </p>
     <p> More Inspiring Decor</p>
     <ul>        
-        <li><a href="../decor/human-centerpeice.html"  >A Lovely Floral Feild Centerpeice</a></li>
-        <li><a href="../decor/antler-statement-peice.html"  >A Bold Antler Statement Peice</a></li>
-        <li><a href="../decor/antler-statement-peice.html"  >A Mesmerizing Monument</a></li>
+        <li><a href="../decor/human-centerpiece.html"  >A Lovely Floral Field Centerpiece</a></li>
+        <li><a href="../decor/antler-statement-piece.html"  >A Bold Antler Statement Piece</a></li>
+        <li><a href="../decor/monument-totem.html"  >A Mesmerizing Monument</a></li>
     </ul>
 </html>
