--- a/decor/monument-totem.html
+++ b/decor/monument-totem.html
@@ -11,15 +11,18 @@
         <img src = "../images/monument-of-bodies.jpg" alt="Still from TV Show Hannibal" width="600">
     </body>
 
-    <p></p>
+    <p>A piece created by Lance Henriksen and planned for over a period of multiple decades. The dedication,
+        effort and clarity of purpose this piece shows makes it a beautiful and satisfying addition to
+        our collection for consideration.
+    </p>
 
     <br></br>
 
     <p><a href="../index.html">Return to Home Page</a></li> </p>
     <p> More Inspiring Decor</p>
     <ul>
-        <li><a href="../decor/human-centerpeice.html"  >A Lovely Floral Feild Centerpeice</a></li>
-        <li><a href="../decor/antler-statement-peice.html"  >A Bold Antler Statement Peice</a></li>
-        <li><a href="../decor/antler-statement-peice.html"  >An Enthralling Installation</a></li>
+        <li><a href="../decor/human-centerpiece.html"  >A Lovely Floral Field Centerpiece</a></li>
+        <li><a href="../decor/antler-statement-piece.html"  >A Bold Antler Statement Piece</a></li>
+        <li><a href="../decor/art-installation.html"  >An Enthralling Installation</a></li>
     </ul>
 </html>
