Added Disclaimer just in case

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             </ul>
         </ul>
 
+        <br></br>
+        <p><b>Disclaimer:</b> All images sources from the TV Show "Hannibal. This site is a fan spin on the Project outlined in The Odin Project's Foundations Course. 
+            Please take all statements, comments and remarks made on this site with a grain of salt. Some images may cause viewer distress or confusion. 
+            This site is not intended to be viewed by children under 13 due to images of dead bodies."</p>
         
     </body>
 </html>
