finishing side dish part

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                     <li><a href="recipes/tenderloin-with-cranberry-sauce.html">Tenderloin with Cranberry Sauce</a></li>
                 </ul>
             <li> Side Dishes</li>
+                <ul>
+                    <li><a href="recipes/charcuterie.html">A simple Charcuterie</a></li>
+                    <li><a href="recipes/deconstructed-salad.html">A Deconstructed Salad</a></li>
+                </ul>
             <li> Centerpeices and Decor to Inspire</li>
                 <ul>
                     <li><a href="decor/human-centerpeice.html">A Lovely Floral Field Centerpeice</a></li>
@@ -30,20 +34,20 @@
                     <li><a href="decor/monument-totem.html">A Mesmerizing Monument</a></li>
                     <li><a href="decor/art-installation.html">An Enthralling Installation</a></li>
                 </ul>
-            <li> Desserts</li>
             <li> Plebian Favorites</li>
-            <ul>
-                <li><a href="recipes/american-enchiladas.html">American Enchiladas</a></li>
-                <li><a href="recipes/buffalo-chicken-dip.html">Buffalo Chicken Dip</a></li>
-                <li><a href="recipes/college-fried-rice.html">College Fried Rice</a></li>
-                <li><a href="recipes/brownies.html">Brownies</a></li>
-                <li><a href="recipes/simple-white-bread.html">Simple White Bread</a></li>
-                <li><a href="recipes/college-fried-ramen.html">College Fried Ramen</a></li>
-            </ul>
+                <ul>
+                    <li><a href="recipes/buffalo-chicken-dip.html">Buffalo Chicken Dip</a></li>
+                    <li><a href="recipes/american-enchiladas.html">American Enchiladas</a></li>
+                    <li><a href="recipes/college-fried-rice.html">College Fried Rice</a></li>
+                    <li><a href="recipes/brownies.html">Brownies</a></li>
+                    <li><a href="recipes/simple-white-bread.html">Simple White Bread</a></li>
+                    <li><a href="recipes/college-fried-ramen.html">College Fried Ramen</a></li>
+                </ul>
+            <li> Desserts</li>
         </ul>
 
         <br></br>
-        <p><b>Disclaimer:</b> All images sources from the TV Show "Hannibal. This site is a fan spin on the Project outlined in The Odin Project's Foundations Course. 
+        <p><b>Disclaimer:</b> Many images sourced from the TV Show "Hannibal. This site is a fan spin on the Project outlined in The Odin Project's Foundations Course. 
             Please take all statements, comments and remarks made on this site with a grain of salt. Some images may cause viewer distress or confusion. 
             This site is not intended to be viewed by children under 13 due to images of dead bodies."</p>
         
