Changed ordering on index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             to try, art to savour and ponder, and some basic plebian culinary favorites. 
         </p>
 
-        <h2>Offerings </h2>
+        <h2>Offerings Gastral</h2>
         <ul>
             <li> Main Courses</li>
                 <ul>
@@ -27,23 +27,27 @@
                     <li><a href="recipes/charcuterie.html">A simple Charcuterie</a></li>
                     <li><a href="recipes/deconstructed-salad.html">A Deconstructed Salad</a></li>
                 </ul>
-            <li> Centerpeices and Decor to Inspire</li>
-                <ul>
-                    <li><a href="decor/human-centerpeice.html">A Lovely Floral Field Centerpeice</a></li>
-                    <li><a href="decor/antler-statement-peice.html">A Bold Antler Statement Peice</a></li>
-                    <li><a href="decor/monument-totem.html">A Mesmerizing Monument</a></li>
-                    <li><a href="decor/art-installation.html">An Enthralling Installation</a></li>
-                </ul>
             <li> Plebian Favorites</li>
                 <ul>
                     <li><a href="recipes/buffalo-chicken-dip.html">Buffalo Chicken Dip</a></li>
-                    <li><a href="recipes/american-enchiladas.html">American Enchiladas</a></li>
-                    <li><a href="recipes/college-fried-rice.html">College Fried Rice</a></li>
+                    <!-- <li><a href="recipes/american-enchiladas.html">American Enchiladas</a></li> -->
+                    <!-- <li><a href="recipes/college-fried-rice.html">College Fried Rice</a></li> -->
                     <li><a href="recipes/brownies.html">Brownies</a></li>
-                    <li><a href="recipes/simple-white-bread.html">Simple White Bread</a></li>
-                    <li><a href="recipes/college-fried-ramen.html">College Fried Ramen</a></li>
+                    <!-- <li><a href="recipes/simple-white-bread.html">Simple White Bread</a></li> -->
+                    <!-- <li><a href="recipes/college-fried-ramen.html">College Fried Ramen</a></li> -->
                 </ul>
-            <li> Desserts</li>
+            <!-- <li> Desserts</li> -->
+            
+        </ul>
+        <h2>Offerings visual</h2>
+        <ul>
+            <li> Centerpeices and Decor to Inspire</li>
+            <ul>
+                <li><a href="decor/human-centerpiece.html">A Lovely Floral Field Centerpeice</a></li>
+                <li><a href="decor/antler-statement-piece.html">A Bold Antler Statement Peice</a></li>
+                <li><a href="decor/monument-totem.html">A Mesmerizing Monument</a></li>
+                <li><a href="decor/art-installation.html">An Enthralling Installation</a></li>
+            </ul>
         </ul>
 
         <br></br>
