Changes color scheme

--- a/decor/art-installation.html
+++ b/decor/art-installation.html
@@ -5,7 +5,7 @@
         <title>Decor</title>
     </head>
 
-    <body>
+    <body style="background-color:rgb(250, 243, 240);">
         <h1> An Enthralling Installation</h1>
 
         <img src = "../images/randall-art-installation.jpeg" alt="Still from TV Show Hannibal" width="600">
