--- a/decor/human-centerpiece.html
+++ b/decor/human-centerpiece.html
@@ -5,7 +5,7 @@
         <title>Decor</title>
     </head>
 
-    <body>
+    <body style="background-color:rgb(250, 243, 240);">
         <h1> A Lovely Floral Field Centerpeice</h1>
 
         <img src = "../images/tree-human-flowers.jpg" alt="Still from TV Show Hannibal" width="600">
