--- a/decor/monument-totem.html
+++ b/decor/monument-totem.html
@@ -5,7 +5,7 @@
         <title>Decor</title>
     </head>
 
-    <body>
+    <body style="background-color:rgb(250, 243, 240);">
         <h1> A Mesmerizing Monument</h1>
 
         <img src = "../images/monument-of-bodies.jpg" alt="Still from TV Show Hannibal" width="600">
