--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Dakkar's Recipes</title>
     </head>
 
-    <body>
+    <body style="background-color:rgb(250, 243, 240);">
         <h1> Odin Recipes & More by Dakkar</h1>
 
         <img src = "images/home-image.png" alt="Still from TV Show Hannibal" width="800">
