--- a/recipes/buffalo-chicken-dip.html
+++ b/recipes/buffalo-chicken-dip.html
@@ -5,7 +5,7 @@
         <title>Dakkar's Recipes</title>
     </head>
 
-    <body>
+    <body style="background-color:rgb(250, 243, 240);">
         <h1> Buffalo Chicken Dip</h1>
 
         <img src = "../images/buffalo-chicken-dip.jpg" alt="buffalo-chicken-dip" width="600">
