--- a/recipes/deconstructed-salad.html
+++ b/recipes/deconstructed-salad.html
@@ -5,7 +5,7 @@
         <title>Dakkar's Recipes</title>
     </head>
 
-    <body>
+    <body style="background-color:rgb(250, 243, 240);">
         <h1>A Deconstructed Salad</h1>
 
         <img src = "../images/deconstructed-salad.jpeg" alt="Still from TV Show Hannibal" width="600">
