--- a/recipes/tenderloin-with-cranberry-sauce.html
+++ b/recipes/tenderloin-with-cranberry-sauce.html
@@ -5,7 +5,7 @@
         <title>Dakkar's Recipes</title>
     </head>
 
-    <body>
+    <body style="background-color:rgb(250, 243, 240);">
         <h1> Tenderloin & Cranberry Sauce</h1>
 
         <img src = "../images/pork-with-cranberry-sauce.jpeg" alt="Still from TV Show Hannibal" width="600">
@@ -27,7 +27,6 @@
                 <li>Fresh Rosemary, coarsely chopped</li>
                 <li>1 T. Olive Oil</li>
                 <li>1 T. Butter</li>
-                <li>1 T. Milk or Cream</li>
                 <li>Coarse Salt, Pepper, Onion & Garlic Powder to taste</li>
             </ul>
             <p>For the Cranberry Sauce:</p>
