--- a/decor/antler-statement-piece.html
+++ b/decor/antler-statement-piece.html
@@ -5,7 +5,7 @@
         <title>Decor</title>
     </head>
 
-    <body>
+    <body style="background-color:rgb(250, 243, 240);">
         <h1> A Bold Antler Statement Peice</h1>
 
         <img src = "../images/antler-peice.jpg" alt="Still from TV Show Hannibal" width="600">
