--- a/recipes/a-simple-breakfast.html
+++ b/recipes/a-simple-breakfast.html
@@ -5,7 +5,7 @@
         <title>Dakkar's Recipes</title>
     </head>
 
-    <body>
+    <body style="background-color:rgb(250, 243, 240);">
         <h1> A Simple Breakfast</h1>
 
         <img src = "../images/simple-breakfast.jpg" alt="Still from TV Show Hannibal" width="600">
