--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -5,7 +5,7 @@
         <title>Dakkar's Recipes</title>
     </head>
 
-    <body>
+    <body style="background-color:rgb(250, 243, 240);">
         <h1> Double Chocolate Brownies</h1>
 
         <img src = "../images/brownies.jpg" alt="Brownies" width="600">
