--- a/recipes/charcuterie.html
+++ b/recipes/charcuterie.html
@@ -5,7 +5,7 @@
         <title>Dakkar's Recipes</title>
     </head>
 
-    <body>
+    <body style="background-color:rgb(250, 243, 240);">
         <h1>A simple Charcuterie</h1>
 
         <img src = "../images/charcuterie.jpeg" alt="Still from TV Show Hannibal" width="600">
