--- a/decor/art-installation.html
+++ b/decor/art-installation.html
@@ -3,27 +3,44 @@
     <head>
         <meta charset="UTF-8">
         <title>Decor</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
-    <body style="background-color:rgb(250, 243, 240);">
-        <h1> An Enthralling Installation</h1>
+    <body>
+        <div class="home_header_a">
+            <button><a href="../index.html">Home</a></button>
+        </div>
 
-        <img src = "../images/randall-art-installation.jpeg" alt="Still from TV Show Hannibal" width="600">
+        <h1><u>An Enthralling Installation</u></h1>
+
+        <div class="art_content" >
+
+            <div class="art_image">
+                <img src = "../images/randall-art-installation.jpeg" alt="Still from TV Show Hannibal" width="600">
+            </div>
+        
+            <div class="art_desc">
+                <p>A truly transformative display by the Ripper's protege and greatest triumph Graham. The piece features Graham's second
+                    kill, one of his landmark displays. The intricate beauty and delicateness of the skillful
+                    combination and the recognization and respect to the subject's identity makes this a work of
+                    incredible significance, and has been known to trigger hours of deep contemplation. 
+                </p>
+            </div>
+        </div>
+
+        <div class="art_footer">
+            <button><a href="../index.html">Home</a></button>
+            <p><u>More Inspiring Decor</u></p>
+            <ul>        
+                <li><a href="../decor/human-centerpiece.html"  >A Lovely Floral Field Centerpiece</a></li>
+                <li><a href="../decor/antler-statement-piece.html"  >A Bold Antler Statement Piece</a></li>
+                <li><a href="../decor/monument-totem.html"  >A Mesmerizing Monument</a></li>
+            </ul>
+        </div>
+
+        <div class="footer_a">
+            <p>Copyright Me (TM) - Dakkar</p>
+        </div>
+        
     </body>
-
-    <p>A truly transformative display by the Ripper's protege and greatest triumph Graham. The piece features Graham's second
-        kill, one of his landmark displays. The intricate beauty and delicateness of the skillful
-        combination and the recognization and respect to the subject's identity makes this a work of
-        incredible significance, and has been known to trigger hours of deep contemplation. 
-    </p>
-
-    <br></br>
-
-    <p><a href="../index.html">Return to Home Page</a></li> </p>
-    <p> More Inspiring Decor</p>
-    <ul>        
-        <li><a href="../decor/human-centerpiece.html"  >A Lovely Floral Field Centerpiece</a></li>
-        <li><a href="../decor/antler-statement-piece.html"  >A Bold Antler Statement Piece</a></li>
-        <li><a href="../decor/monument-totem.html"  >A Mesmerizing Monument</a></li>
-    </ul>
 </html>
