--- a/decor/human-centerpiece.html
+++ b/decor/human-centerpiece.html
@@ -3,28 +3,43 @@
     <head>
         <meta charset="UTF-8">
         <title>Decor</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
-    <body style="background-color:rgb(250, 243, 240);">
-        <h1> A Lovely Floral Field Centerpeice</h1>
+    <body>
+        <div class="home_header_a">
+            <button><a href="../index.html">Home</a></button>
+        </div>
 
-        <img src = "../images/tree-human-flowers.jpg" alt="Still from TV Show Hannibal" width="600">
+        <h1><u>A Lovely Floral Field Centerpiece</u></h1>
+
+        <div class="art_content" >
+            <div class="art_image">
+                <img src = "../images/tree-human-flowers.jpg" alt="Still from TV Show Hannibal" width="600">
+            </div>
+    
+            <div class="art_desc">
+                <p>Created by the Ripper himself, this exquisite piece incorperates the subject into the backing
+                    tree, and shows the careful consideration of each organ and it's replacement with a floral element
+                    to ultimately create a piece with such tenderness of expression and delicacy of presentation that
+                    we are in awe of the genius of the great master artist. 
+                </p>
+            </div>
+        </div>
+
+
+        <div class="art_footer">
+            <button><a href="../index.html">Home</a></button>
+            <p><u>More Inspiring Decor</u></p>
+            <ul>        
+                <li><a href="../decor/antler-statement-piece.html"  >A Bold Antler Statement Piece</a></li>
+                <li><a href="../decor/monument-totem.html"  >A Mesmerizing Monument</a></li>
+                <li><a href="../decor/art-installation.html"  >An Enthralling Installation</a></li>
+            </ul>
+        </div>
+
+        <div class="footer_a">
+            <p>Copyright Me (TM) - Dakkar</p>
+        </div>
     </body>
-
-    <p>Created by the Ripper himself, this exquisite peice incorperates the subject into the backing
-        tree, and shows the careful consideration of each organ and it's replacement with a floral element
-        to ultimatly create a piece with such tenderness of expression and delicacy of presentation that
-        we are in awe of the genius of the great master artist. 
-    </p>
-
-    <br></br>
-
-    <p><a href="../index.html">Return to Home Page</a></li> </p>
-    <p> More Inspiring Decor</p>
-    <ul>        
-        <li><a href="../decor/antler-statement-piece.html"  >A Bold Antler Statement Piece</a></li>
-        <li><a href="../decor/monument-totem.html"  >A Mesmerizing Monument</a></li>
-        <li><a href="../decor/art-installation.html"  >An Enthralling Installation</a></li>
-    </ul>
-
 </html>
