--- a/decor/monument-totem.html
+++ b/decor/monument-totem.html
@@ -3,26 +3,42 @@
     <head>
         <meta charset="UTF-8">
         <title>Decor</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
-    <body style="background-color:rgb(250, 243, 240);">
-        <h1> A Mesmerizing Monument</h1>
+    <body>
+        <div class="home_header_a">
+            <button><a href="../index.html">Home</a></button>
+        </div>
 
-        <img src = "../images/monument-of-bodies.jpg" alt="Still from TV Show Hannibal" width="600">
+        <h1><u>A Mesmerizing Monument</u></h1>
+
+        <div class="art_content" >
+            <div class="art_image">
+                <img src = "../images/monument-of-bodies.jpg" alt="Still from TV Show Hannibal" width="600">
+            </div>
+
+            <div class="art_desc">
+               <p>A piece created by Lance Henriksen and planned for over a period of multiple decades. The dedication,
+                effort and clarity of purpose this piece shows makes it a beautiful and satisfying addition to
+                our collection for consideration.
+                </p> 
+            </div>
+        </div>
+        
+        <div class="art_footer">
+            <button><a href="../index.html">Home</a></button>
+            <p><u>More Inspiring Decor</u></p>
+            <ul>
+                <li><a href="../decor/human-centerpiece.html"  >A Lovely Floral Field Centerpiece</a></li>
+                <li><a href="../decor/antler-statement-piece.html"  >A Bold Antler Statement Piece</a></li>
+                <li><a href="../decor/art-installation.html"  >An Enthralling Installation</a></li>
+            </ul>
+        </div>
+
+        <div class="footer_a">
+            <p>Copyright Me (TM) - Dakkar</p>
+        </div>
+        
     </body>
-
-    <p>A piece created by Lance Henriksen and planned for over a period of multiple decades. The dedication,
-        effort and clarity of purpose this piece shows makes it a beautiful and satisfying addition to
-        our collection for consideration.
-    </p>
-
-    <br></br>
-
-    <p><a href="../index.html">Return to Home Page</a></li> </p>
-    <p> More Inspiring Decor</p>
-    <ul>
-        <li><a href="../decor/human-centerpiece.html"  >A Lovely Floral Field Centerpiece</a></li>
-        <li><a href="../decor/antler-statement-piece.html"  >A Bold Antler Statement Piece</a></li>
-        <li><a href="../decor/art-installation.html"  >An Enthralling Installation</a></li>
-    </ul>
 </html>
