--- a/index.html
+++ b/index.html
@@ -3,57 +3,79 @@
     <head>
         <meta charset="UTF-8">
         <title>Dakkar's Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
-    <body style="background-color:rgb(250, 243, 240);">
-        <h1> Odin Recipes & More by Dakkar</h1>
+    <body>
 
-        <img src = "images/home-image.png" alt="Still from TV Show Hannibal" width="800">
+        <div class="grid">
 
-        <h2>Description </h2>
-        <p>This site offers delicacies both gastral and visual. Explore to discover new delights
-            to try, art to savour and ponder, and some basic plebian culinary favorites. 
-        </p>
+            <div class="heading">
+                <h1> Odin Recipes & More by Dakkar</h1>
+                <h3>Delicacies both gastral and visual. Explore to discover new delights
+                    to try, art to savour and ponder, and some basic plebian culinary favorites. 
+                </h3>
 
-        <h2>Offerings Gastral</h2>
-        <ul>
-            <li> Main Courses</li>
-                <ul>
-                    <li><a href="recipes/a-simple-breakfast.html">A simple Breakfast</a></li>
-                    <li><a href="recipes/tenderloin-with-cranberry-sauce.html">Tenderloin with Cranberry Sauce</a></li>
-                </ul>
-            <li> Side Dishes</li>
-                <ul>
-                    <li><a href="recipes/charcuterie.html">A simple Charcuterie</a></li>
-                    <li><a href="recipes/deconstructed-salad.html">A Deconstructed Salad</a></li>
-                </ul>
-            <li> Plebian Favorites</li>
-                <ul>
-                    <li><a href="recipes/buffalo-chicken-dip.html">Buffalo Chicken Dip</a></li>
-                    <!-- <li><a href="recipes/american-enchiladas.html">American Enchiladas</a></li> -->
-                    <!-- <li><a href="recipes/college-fried-rice.html">College Fried Rice</a></li> -->
-                    <li><a href="recipes/brownies.html">Brownies</a></li>
-                    <!-- <li><a href="recipes/simple-white-bread.html">Simple White Bread</a></li> -->
-                    <!-- <li><a href="recipes/college-fried-ramen.html">College Fried Ramen</a></li> -->
-                </ul>
-            <!-- <li> Desserts</li> -->
-            
-        </ul>
-        <h2>Offerings visual</h2>
-        <ul>
-            <li> Centerpeices and Decor to Inspire</li>
-            <ul>
-                <li><a href="decor/human-centerpiece.html">A Lovely Floral Field Centerpeice</a></li>
-                <li><a href="decor/antler-statement-piece.html">A Bold Antler Statement Peice</a></li>
-                <li><a href="decor/monument-totem.html">A Mesmerizing Monument</a></li>
-                <li><a href="decor/art-installation.html">An Enthralling Installation</a></li>
-            </ul>
-        </ul>
+            </div> 
+            <div class="head_image">
+                <img src = "images/home-image1.png" alt="Still from TV Show Hannibal" width="800">
+            </div>
 
-        <br></br>
-        <p><b>Disclaimer:</b> Many images sourced from the TV Show "Hannibal. This site is a fan spin on the Project outlined in The Odin Project's Foundations Course. 
-            Please take all statements, comments and remarks made on this site with a grain of salt. Some images may cause viewer distress or confusion. 
-            This site is not intended to be viewed by children under 13 due to images of dead bodies."</p>
+            <!-- --------------------------------- CONTENT START ------------------------------------------- -->
+            <div class="content">
+                <!-- ------------------------------------------------------------------------------------------- -->
+                <div class="food_div">
+                    <h2>Offerings Gastral</h2>
+                    <ul>
+                        <li> <b>Main Courses</b></li>
+                            <ul>
+                                <li><a href="recipes/a-simple-breakfast.html">A simple Breakfast</a></li>
+                                <li><a href="recipes/tenderloin-with-cranberry-sauce.html">Tenderloin with Cranberry Sauce</a></li>
+                            </ul>
+                        <li> <b>Side Dishes</b></li>
+                            <ul>
+                                <li><a href="recipes/charcuterie.html">A simple Charcuterie</a></li>
+                                <li><a href="recipes/deconstructed-salad.html">A Deconstructed Salad</a></li>
+                            </ul>
+                        <li> <b>Plebian Favorites</b></li>
+                            <ul>
+                                <li><a href="recipes/buffalo-chicken-dip.html">Buffalo Chicken Dip</a></li>
+                                <!-- <li><a href="recipes/american-enchiladas.html">American Enchiladas</a></li> -->
+                                <!-- <li><a href="recipes/college-fried-rice.html">College Fried Rice</a></li> -->
+                                <li><a href="recipes/brownies.html">Brownies</a></li>
+                                <!-- <li><a href="recipes/simple-white-bread.html">Simple White Bread</a></li> -->
+                                <!-- <li><a href="recipes/college-fried-ramen.html">College Fried Ramen</a></li> -->
+                            </ul>
+                        <!-- <li> Desserts</li> -->
+                </div>
+
+                <!-- ------------------------------------------------------------------------------------------- -->
+                <div class="art_div">       
+                    </ul>
+                    <h2>Offerings Visual</h2>
+                    <ul>
+                        <li> <b>Centerpeices and Decor to Inspire</b></li>
+                        <ul>
+                            <li><a href="decor/human-centerpiece.html">A Lovely Floral Field Centerpeice</a></li>
+                            <li><a href="decor/antler-statement-piece.html">A Bold Antler Statement Peice</a></li>
+                            <li><a href="decor/monument-totem.html">A Mesmerizing Monument</a></li>
+                            <li><a href="decor/art-installation.html">An Enthralling Installation</a></li>
+                        </ul>
+                    </ul>
+                </div>
+                <!-- ------------------------------------------------------------------------------------------- -->
+            </div>
+            <!-- --------------------------------- CONTENT END -------------------------------------------- -->
+
+            <div class="footer">
+                <p><b>Disclaimer:</b> Many images sourced from the TV Show "Hannibal". This site is a fan spin on the Project outlined in The Odin Project's Foundations Course. 
+                    Please take all statements, comments and remarks made on this site with a grain of salt. Some images may cause viewer distress or confusion. 
+                    This site is not intended to be viewed by children under 13 due to images of dead bodies.</p>
+
+                <p>Copyright Me (TM) - Dakkar</p>
+            </div>
+
+        </div>
         
     </body>
 </html>
