--- a/decor/human-centerpiece.html
+++ b/decor/human-centerpiece.html
@@ -19,7 +19,7 @@
             </div>
     
             <div class="art_desc">
-                <p>Created by the Ripper himself, this exquisite piece incorperates the subject into the backing
+                <p>Created by the Ripper himself, this exquisite piece incorporates the subject into the backing
                     tree, and shows the careful consideration of each organ and it's replacement with a floral element
                     to ultimately create a piece with such tenderness of expression and delicacy of presentation that
                     we are in awe of the genius of the great master artist. 
